Fix with jumping navbar on modal open/close.

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,14 @@ body {
     padding: 0;
 }
 
+.navbar .container-fluid {
+    padding-right: 0;
+}
+
+.navbar-right {
+    margin-right: 0;
+}
+
 .navbar .top-bar {
     background-color: #ca2129;
     height: 5px;
